<resources>
    <string name="app_name">SafeGuard</string>
    <string name="splash_logo">splash-logo</string>
    <string name="Sign_up_out">Enter your email to Sign-up</string>
    <string name="Sign_up_in">Enter your email</string>
    <string name="pass_in">Enter your new password</string>
    <string name="pass_out">Enter a Password</string>
    <string name="already_have_acc">Already have an account?</string>
    <string name="log_in_ip">Log in</string>
    <string name="continue_btn">Continue</string>
    <string name="login_out">Enter your Login Credentials</string>
    <string name="forgot_password_txt">Forgot password</string>
    <string name="reset_here_txt">Reset here?</string>
    <string name="warning_wrong_creds">The email and password don\'t belong to the same account. Check the inputs and try again.</string>
    <string name="warning">warning_icon</string>
    <string name="home">Home</string>
    <string name="btn_saved_faces">Saved Faces</string>
    <string name="btn_add_new_face">Add new face</string>
    <string name="secure_mode_txt">Secure mode off</string>
    <string name="profile_email">Email</string>
    <string name="profile_pg_title">Profile</string>
    <string name="profile_pass">Password</string>
    <string name="profile_reset_password">Reset Password</string>
    <string name="passwords_no_match">Passwords does not match</string>
    <string name="enter_new_password_profile_title">Enter new password</string>
    <string name="secure_mode_on_text">We are continuously scanning through your camera for any unknown person</string>
    <string name="pass_reset_title">Enter OTP sent to your email and Enter new password</string>
    <string name="enter_new_password_resetip1">Enter new password</string>
    <string name="confirm_new_password_resetip2">Confirm new password</string>
    <string name="rst_pass_enter_otp">Enter OTP</string>
    <string name="detected_faces">Detected Faces</string>
    <string name="saved_faces">Saved Faces</string>
    <string name="img_owner_faces">img_owner_faces</string>
    <string name="add_face">Add Face</string>
    <string name="camera_user_instructions">Position your face in above box</string>
    <string name="get_image_from_gallery">Get Image from Gallery</string>
    <string name="enter_otp_sent_to_your_mobile_number">Enter OTP sent to your mobile number</string>
    <string name="otp_incorrect">OTP incorrect</string>
    <string name="no_login_signup">Can\'t Login</string>
    <string name="signup_here">Signup here?</string>
    <string name="enter_email">Enter your email</string>
    <string name="enter_your_email_to_reset_password">Enter your email to reset password</string>
    <string name="login_passsin">Enter your password</string>
    <string name="sign_out">Sign out</string>
    <string name="btn_all_faces">All Faces</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="all_faces">All Faces</string>
    <string name="tab_txt_saved_faces">Saved Faces</string>
    <string name="tab_txt_detected_faces">Detected Faces</string>
    <string name="img_camera_offline">camera_offline</string>
    <string name="select_image">Select Image</string>
    <string name="get_image">Get Image</string>
    <string name="upload_image">Upload Image</string>
    <string name="your_image">Your Image</string>
    <string name="title_activity_main">Leanback MainActivity</string>
    <string name="browse_title">Videos by Your Company</string>
    <string name="related_movies">Related Videos</string>
    <string name="grid_view">Grid View</string>
    <string name="error_fragment">Error Fragment</string>
    <string name="personal_settings">Personal Settings</string>
    <string name="watch_trailer_1">Watch trailer</string>
    <string name="watch_trailer_2">FREE</string>
    <string name="rent_1">Rent By Day</string>
    <string name="rent_2">From $1.99</string>
    <string name="buy_1">Buy and Own</string>
    <string name="buy_2">AT $9.99</string>
    <string name="movie">Movie</string>

    <!-- Error messages -->
    <string name="error_fragment_message">An error occurred</string>
    <string name="dismiss_error">Dismiss</string>
</resources>