<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".reset_password_java">

    <EditText
        android:id="@+id/edittxt_enter_email_reset"
        android:layout_width="350dp"
        android:layout_height="57dp"
        android:autofillHints=""
        android:background="@drawable/signup_login_input_with_effects"
        android:ems="10"
        android:fontFamily="@font/open_sans"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:textColor="#000000"
        android:textColorHint="#757575"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.442"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.142" />

    <TextView
        android:id="@+id/txt_email2"
        android:layout_width="354dp"
        android:layout_height="47dp"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/open_sans"
        android:gravity="start|center_horizontal|center_vertical"
        android:text="@string/enter_your_email_to_reset_password"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.268"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.071" />

    <Button
        android:id="@+id/btn_pass_reset_otp_continue1"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:background="@drawable/signup_login_btn_with_effect"
        android:backgroundTint="@null"
        android:hapticFeedbackEnabled="true"
        android:text="@string/continue_btn"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.954" />

</androidx.constraintlayout.widget.ConstraintLayout>