<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".signup_java">

    <EditText
        android:id="@+id/edittxt_email"
        android:layout_width="350dp"
        android:layout_height="57dp"
        android:autofillHints=""
        android:background="@drawable/signup_login_input_with_effects"
        android:ems="10"
        android:fontFamily="@font/open_sans"
        android:hint="@string/Sign_up_in"
        android:inputType="textEmailAddress"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:textColor="#000000"
        android:textColorHint="#757575"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.120000005" />

    <TextView
        android:id="@+id/txt_email"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="95dp"
        android:fontFamily="@font/open_sans"
        android:gravity="start|center_horizontal|center_vertical"
        android:text="@string/Sign_up_out"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.348"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.062" />

    <TextView
        android:id="@+id/txthaveacc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="60dp"
        android:fontFamily="@font/open_sans"
        android:gravity="center_vertical"
        android:lineSpacingExtra="1sp"
        android:text="@string/already_have_acc"
        android:textColor="#757575"
        android:textColorHint="#A3A3A3"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />

    <TextView
        android:id="@+id/txt_login"
        android:layout_width="48dp"
        android:layout_height="35dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/open_sans"
        android:text="@string/log_in_ip"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/txthaveacc"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/btn_continue1"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:background="@drawable/signup_login_btn_with_effect"
        android:backgroundTint="@null"
        android:hapticFeedbackEnabled="true"
        android:text="@string/continue_btn"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.98" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scrollbarSize="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.19999999"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edittxt_password"
            android:layout_width="350dp"
            android:layout_height="57dp"
            android:background="@drawable/signup_login_input_with_effects"
            android:ems="15"
            android:fontFamily="@font/open_sans"
            android:inputType="textPassword"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textColor="#000000"
            android:textColorHint="#757575"
            android:textSize="18sp"
            android:textStyle="bold"
            app:hintEnabled="false"
            tools:ignore="TextContrastCheck,SpeakableTextPresentCheck" />

    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>