<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".all_faces_java">

    <TextView
        android:id="@+id/txt_all_faces"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:fontFamily="@font/open_sans"
        android:gravity="center"
        android:lineSpacingExtra="-7sp"
        android:text="@string/all_faces"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.tabs.TabLayout
        android:id="@+id/all_faces_tablayout1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="59dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toTopOf="@+id/all_faces_viewPager1"
        app:layout_constraintEnd_toEndOf="parent"
        app:tabTextAppearance="@style/tab_layout_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tabTextColor="@color/gray"
        app:tabRippleColor="@null"
        app:tabSelectedTextColor="@color/black"
        app:tabIndicatorColor="@color/black"
        tools:ignore="SpeakableTextPresentCheck">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_saved_faces"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/saved_faces" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_detected_faces"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detected_faces" />
    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/all_faces_viewPager1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/all_faces_tablayout1" />

    <Button
        android:id="@+id/btn_delete_faces"
        android:layout_width="27dp"
        android:layout_height="28dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/btn_trash_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>